<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_master</name>
  <version>0.0.0</version>
  <description>VDA5050 master control implementation</description>
  <maintainer email="glenn_tan@a-star.edu.sg">Glenn Tan</maintainer>
  <maintainer email="saurabh_kamat@a-star.edu.sg">Saurabh Kamat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>vda5050_core</depend>
  <depend>vda5050_types</depend>
  <depend>vda5050_json_utils</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
